# grasp-py

./: .gitignore  GRASP_Comm.py  GRASP_Comm_BT.py  GRASP_Comm_UART.py  GRASP_Input.py  GRASP_Input_TS.py  GRASP_Input_Voice.py  GRASP_Manager.py  GRASP_gui.py  README.md  __main__.py  benchmark.py  coco_eval.py  coco_utils.py  commands.txt  definitions.py  detection2.py  engine.py  environment.yaml  finetune.py  get_transform.py  init_dataset.py  main.py  manager.py  meta.yaml  notes.txt  requirements.txt  settings.yaml  setup.cfg  setup.py  test.py  train.py  transforms.py  tuning.py  voice_input.py
Luca_yolov8_model/: config.yaml  create_dataset_yolo_format.py  create_image_list_file.py  downloader.py  image_list_file  instructions.txt  main.py  predict_video.py
Luca_yolov8_model/data/: imgs.cache
YOLOv8_Transfer_Learning/: config.yaml  config_openimg.yaml  train.ipynb  transfer_learning.ipynb
communication/: communication.py  communication_uart.py
data/grip_select/: YOLO_v8.ipynb
emg/: emg.py
fsr_matrix/: README.md  __main__.py  map_raw_output.py  settings.yaml
fsr_matrix/classifier/: __main__.py  matrix_classifier.py  old.py  old2.py
fsr_matrix/data_processing/: reader.py  reader_file.py  reader_uart.py
gui/: GRASP_gui.py  gui_button.py
interaction/: interaction_touchscreen.py  interaction_voice.py
src/: definitions.py  manager.py  module.py  utils.py
src/bms/: Untitled.ipynb  __main__.py  bms_algorithm.py  bms_module.py  single_process_algorithm.py
src/emg/: __main__.py  continuous_model.py  emg.py  emg_fig.html  (+6 more)
voice_model/: 2995.dic
(+122 files in other folders)
