[metadata]
name = grasp-analytics
version = attr: grasp-analytics.__version__
url = https://ubcbionics.com/
project_urls =
    Source Code = https://gitlab.com/UBCBear/grasp-py/
    Issue Tracker = https://gitlab.com/UBCBear/grasp-py/issues/
license = BSD-3-Clause
license_files = LICENSE
author = James Ross
author_email = jross02@student.ubc.ca
maintainer = UBCBionics
maintainer_email = ubcbionicsteam@gmail.com
description = Modules for UBC Bionics GRASP
long_description = file: README.me
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7
install_requires=
    numpy
    pandas
    matplotlib
    pillow
    pyyaml
    pathlib
    pytest
    pyserial
    scipy
    plotly
    pygame

[options.packages.find]
where = src

;[tool:pytest]
;testpaths = tests
;filterwarnings =
;    error
;
;[coverage:run]
;branch = true
;source =
;    click
;    tests